# ChangeLog for app-admin/realpath
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/realpath/ChangeLog,v 1.30 2008/03/27 16:12:54 armin76 Exp $

  27 Mar 2008; Raúl Porcel <armin76@gentoo.org> realpath-1.9.16.ebuild,
  realpath-1.9.28.ebuild:
  Fix debian HOMEPAGE

  28 Nov 2007; Fabian Groffen <grobian@gentoo.org> realpath-1.9.16.ebuild,
  realpath-1.9.28.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  23 Jun 2007; Joshua Kinard <kumba@gentoo.org> realpath-1.9.28.ebuild:
  Stable on mips, per #182979.

  23 Jun 2007; Christoph Mende <angelos@gentoo.org> realpath-1.9.28.ebuild:
  Stable on amd64 wrt bug 182979

  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  realpath-1.9.28.ebuild:
  Stable on sparc

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> realpath-1.9.28.ebuild:
  Stable on ppc64

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org>
  realpath-1.9.28.ebuild:
  Stable on ppc.

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> realpath-1.9.28.ebuild:
  x86 stable

  04 Feb 2007; Ryan Hill <dirtyepic@gentoo.org>
  +files/realpath-1.9.16-Makefile.patch,
  +files/realpath-1.9.28-Makefile.patch, -realpath-1.9.3.ebuild,
  -realpath-1.9.10.ebuild, realpath-1.9.16.ebuild, realpath-1.9.28.ebuild:
  Fix pre-stripping of files, pass CFLAGS and LDFLAGS and get CC using
  tc-getCC for bug #152219. Patch by jakub@gentoo.org. Remove old versions.

  20 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> realpath-1.9.28.ebuild:
  Drop ~x86-fbsd keyword and block freebsd-bin, as that already provides a
  realpath binary.

  07 Apr 2006; Bryan Østergaard <kloeri@gentoo.org metadata.xml:
  Remove ciaranm from metadata.xml.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> realpath-1.9.28.ebuild:
  Add ~x86-fbsd keyword.

*realpath-1.9.28 (04 Mar 2006)

  04 Mar 2006; Ciaran McCreesh <ciaranm@gentoo.org> +realpath-1.9.28.ebuild:
  New version. Fix tests.
