@@ -1,5 +1,7 @@
 AUX realpath-1.9.28-Makefile.patch 1060 RMD160 346d04ce972ad976c3baa9f1bd4f1862d81540c0 SHA1 3fe525241a334f92a41ca065384c9c5e558c2f7b SHA256 81f9b51c71933db619ad5323bda7eb1a8a40a12473f948e72575a227faee6184
 DIST dwww_1.9.28.tar.gz 108454 RMD160 d1df920ebdec61f9db3087e0b3c437c6db28cf24 SHA1 0abaa328b6c5bde0989b35ba0ea789d182df35ca SHA256 e5af232c98cd614dc15ee3ee79af229f09f32d485935a09c85ae2b5dc333e8d7
-EBUILD realpath-1.9.28.ebuild 1331 RMD160 cdeb47e2688803b4f70eb21d99b77003d3a113eb SHA1 c66f1dc6cdb01b1b2a7b736fbea605c441336a86 SHA256 96c14a8ff13b68f9c8a9c82374319df969efd90712868854287316aa9ad7bc72
-MISC ChangeLog 3834 RMD160 66a8b1abbe1d1414a1c79dd554f3f6075c4df97c SHA1 50fc1cae86826286b0ab160c745b4d5b58575491 SHA256 08103e3eca8ae064c6e6e162dfe6f89872bc773b7535989734c2007863c1b62e
+DIST realpath_1.12.tar.gz 5758 RMD160 9b156fb2edfe814e67ed5be759f4d40a50c1bd39 SHA1 ed710508b8255682e12cb510c7c35b418fca6656 SHA256 3bb156ebe4b34ded4f0653e8c18a32d1209d65a73c910b6ac1c54aab22b5ea8d
+EBUILD realpath-1.12.ebuild 811 RMD160 17d1487b22f7c8ea5fb05af13cc617a5c183fd33 SHA1 783dd76a9875cb9ba98f99eebc50dccb70c333d9 SHA256 e5de279a1e5f5a8e51d93e07d6576d5e7a5545f16423828ff266bc3f13d4319a
+EBUILD realpath-1.9.28.ebuild 1319 RMD160 b082233a5f4d1ac064fb505be2ce73ddfc8ad1b4 SHA1 e1a64bade03f02cfad1a1dbdbadf9242a9d5a21c SHA256 3536bafadd883b57d19c8cae1727432a981286d6220d0a12c2ca0615d6e7e28b
+MISC ChangeLog 3950 RMD160 9ff107ae05b67999db6c76d93ee0be7e1e6a5089 SHA1 30a6e5dc044cb66c32074643a626a17622ae3ac4 SHA256 9ab3cf17489f6f6627c6453ed10cbc531f5edd049bb453862dcf7d8edb2aa9f2
 MISC metadata.xml 330 RMD160 5950556892ea6f23923cffac156e97738e7fa100 SHA1 c2de52e56f312be68eb5f2966ca0fa62f07c3a4a SHA256 f17d27a5a01ee6d023639016bc98148c14af2ec8566c7253d4049941c1e54760
